@@ -1,2 +1,0 @@
-Download packages listed in file ready for an install.
-$ wajig download-file FILE
